Get rid of hover effect and fix editor color
The editor color was pure black previously, presumably due to some CSS
rule on textarea (although I didn't look into it).

I decided I didn't like the hover effect much.

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -66,17 +66,6 @@ ul.outline-tree {
   touch-action: none;
 }
 
-.bullet + div {
-  padding: 6px;
-  margin: -6px;
-  border-radius: 3px;
-  transition: background-color 300ms;
-}
-
-.bullet:hover + div {
-  background-color: #f8f8f8;
-}
-
 .bullet.collapsed {
   background-image: url(bullet-collapsed.svg);
 }
@@ -230,6 +219,8 @@ a.plain-text-link:hover {
 /* EDITOR */
 
 .editor textarea {
+  color: inherit;
+
   width: 100%;
   padding: 0;
   margin: 0;
